# chat-app

./: .env.example  .gitignore  LICENSE  Makefile  compose.prod.yaml  compose.yaml  pyrightconfig.json
.github/: pull_request_template.md 
.github/workflows/: cd.yml  ci.yaml
front/: Dockerfile.prod  nginx.conf  package-lock.json  package.json
front/src/: App.tsx
front/src/api/: client.ts  endpoints.ts
front/src/components/auth/: AuthForm.tsx
front/src/components/chat/: ChatContainer.tsx  MessageInput.tsx  MessageItem.tsx  (+1 more)
front/src/hooks/: useAuth.ts  useChat.ts  useConversations.ts
front/src/lib/: firebase.ts
front/src/services/: chatService.ts  conversationService.ts
front/src/styles/: auth.css  chat.css  common.css  sidebar.css
front/src/types/: chat.ts
server/: Dockerfile  Dockerfile.prod  pyproject.toml  start.sh
server/alembic/: env.py
server/alembic/versions/: b33f83cb3b5e_create_conversations_and_messages_tables.py  c73b09608952_add_user_uid_to_conversations.py
server/src/: main.py
server/src/config/: __init__.py  env.py
server/src/db/: database.py
server/src/dependencies/: __init__.py  auth.py  openai.py
server/src/models/: __init__.py  base.py  conversation.py  message.py
server/src/repositories/: conversation_repository.py
server/src/routers/: chat_route.py  conversation_route.py  health_route.py
server/src/schemas/request/: chat_request.py
server/src/schemas/response/: chat_response.py
server/src/services/: openai_service.py
server/src/setup/: cors.py  route.py
server/src/usecases/: chat_usecase.py
(+6 files in other folders)
